--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   country_code_picker: ^3.0.0
   intl_phone_field: ^3.2.0
   sprintf: ^7.0.0
+  email_validator: ^2.1.17
 
 dev_dependencies:
   flutter_test:
