--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   email_validator: ^2.1.17
   uuid: ^4.2.1
   otp: ^3.1.4
+  fuzzysearch: ^0.1.3
 
 dev_dependencies:
   flutter_test:
