--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,10 @@ dependencies:
   otp: ^3.1.4
   fuzzysearch: ^0.1.3
   http: ^1.1.0
+  dio: ^5.4.0
+  intl: ^0.19.0
+  crypto: ^3.0.3
+  http_parser: ^4.0.2
 
 dev_dependencies:
   flutter_test:
