--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   intl: ^0.19.0
   crypto: ^3.0.3
   http_parser: ^4.0.2
+  image_picker_web: ^3.1.1
+  file_picker: ^6.1.1
 
 dev_dependencies:
   flutter_test:
